svc-extenal.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-extenal
  labels:
    app: webapp
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: web
      protocol: TCP
  type: ClusterIP
