service.yaml

apiVersion: v1
kind: Service
metadata:
  name: springboot-app
spec:
  selector:
    app: springboot-app #选中上面的 Deployment
  ports:
    - port: 7003 #对外7003端口
      targetPort: 8080


---
#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  IngressClass: nginx
  rules:
    - host: springboot.demo.com #所有的host这个域名请求 转发到上面的 Service= springboot-app
      http:
        paths:springboot-app
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: springboot-app # 转发到 这个Service
                port:
                  number: 7003
